--- a/punchin/core/templates/base.html
+++ b/punchin/core/templates/base.html
@@ -110,11 +110,14 @@
 
       function deleteEmployee(event){
         if (!confirm('Are you sure you want to delete this Employee?')) {
-          event.preventDefault(); // Block the form submission
-          this.reset();
+          event.preventDefault();
         }
       }
-
+      function deleteLocation(event){
+        if (!confirm('Are you sure you want to delete this Location?')) {
+          event.preventDefault(); 
+      }
+    }
     
 
       function setRate(event){
