--- a/punchin/core/templates/dashboard/locations.html
+++ b/punchin/core/templates/dashboard/locations.html
@@ -1,7 +1,7 @@
 {% extends './main.html' %}
 
 {% block body %}
-<div id="employeeApp">
+<div id="locationApp">
     <div class="container rounded bg-white mt-4 shadow min-h-96">
 
         <div class="header mb-5 text-center p-4 flex justify-between items-center">
@@ -9,15 +9,15 @@
             </div>
          
             
-            <div class="flex gap-2" v-show="selectedEmployee">
+            <div class="flex gap-2" v-show="selectedLocation">
                 <button href="#updateLocationModal" class="bg-gray-400 text-white hover:bg-slate-700 flex items-center space-x-2 px-6 py-2 rounded" id="openModal" onclick="openModal('updateLocationModal')">
                   <span data-feather="edit"></span>
                   <span>Edit</span>
                 </button>
-                <form action="{% url 'delete_employee' %}" method="post">
+                <form action="{% url 'delete_location' %}" method="post">
                     {% csrf_token %}
-                    <input type="hidden" :value="selectedEmployee?.id" name="id" />
-                    <button type="submit" class="bg-gray-400 text-white hover:bg-slate-700 flex items-center space-x-2 px-6 py-2 rounded" onclick="deleteEmployee(event)">
+                    <input type="hidden" :value="selectedLocation?.id" name="id" />
+                    <button type="submit" class="bg-gray-400 text-white hover:bg-slate-700 flex items-center space-x-2 px-6 py-2 rounded" onclick="deleteLocation(event)">
                     <span data-feather="trash-2"></span>
                     <span>Delete</span>
                     </button>
@@ -52,6 +52,14 @@
                         <tr class="bg-white border-b text-sm ">
                             <td class="w-4 p-4">
                                 <div class="flex items-center">
+                                    <input id="checkbox-table-search-1" type="radio" name="loc"
+                                        class=" text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500" @change="selectLocation({
+                                            address:`{{location.address}}`,
+                                            longitude:'{{location.longitude}}',
+                                            latitude:'{{location.latitude}}',
+                                            id:'{{location.id}}',
+                                            name:`{{location.name}}`
+                                        })"/>
                                     <label for="checkbox-table-search-1" class="sr-only">checkbox</label>
                                 </div>
                             </td>
@@ -153,31 +161,34 @@
             <div class="p-6">
                 <form class="max-w-sm mx-auto" method="POST" action="{% url 'update_location' %}">
                     {% csrf_token %}
+                    <input type="hidden" :value="selectedLocation?.id" name="id" />
                     
                     <div class="flex justify-between">
                         <div class="mb-3 w-full">
                             <label for="address" class="block mb-2 text-sm font-medium text-gray-900 ">Name</label>
-                            <input type="text" name="name" placeholder="Name of location" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-1.5">
+                            <input type="text" name="name" placeholder="Name of location" :value="selectedLocation?.name" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-1.5">
                         </div>
                     </div>
                     <div class="flex justify-between">
                         <div class="mb-3 w-full">
                             <label for="address" class="block mb-2 text-sm font-medium text-gray-900 ">Address</label>
-                            <input type="text" id="addressInput" name="address" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-1.5">
+                            <input type="text" id="editAddressInput" name="address" :value="selectedLocation?.address"  class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-1.5">
                         </div>
                     </div>
                     <div class="grid gap-2 grid-cols-2">
                         <div class="mb-3">
                             <label for="hourly_rate" class="block mb-2 text-sm font-medium text-gray-400 "> Longitude </label>
-                            <input type="longitude" 
-                                id="longitudeInput" name="longitude"
-                                class="bg-gray-50 border border-gray-100 text-gray-400 text-sm rounded-lg block w-full p-1.5 disabled" disabled />
+                            <input type="number" step="0.1" 
+                                :value="selectedLocation?.longitude" 
+                                id="longitudeInputd" name="longitude"
+                                class="bg-gray-50 border border-gray-100 text-gray-400 text-sm rounded-lg block w-full p-1.5 disabled" readonly />
                         </div>
                         <div class="mb-3 ">
                             <label for="overtime_hourly_rate"
                                 class="block mb-2 text-sm font-medium text-gray-400 ">Latitude </label>
-                            <input type="latitude" id="latitudeInput" name="latitude"
-                                class="bg-gray-50 border border-gray-100 text-gray-400 text-sm rounded-lg block w-full p-1.5 disabled" disabled />
+                            <input type="number" step="0.1" id="latitudeInputd"               
+                                :value="selectedLocation?.latitude"  name="latitude"
+                                class="bg-gray-50 border border-gray-100 text-gray-400 text-sm rounded-lg block w-full p-1.5 disabled" readonly />
                         </div>
                     </div>
                     <div class="mt-6 flex gap-3 items-center justify-end mb-1">
@@ -204,14 +215,23 @@
     function initializeAutocomplete() {
         var input = document.getElementById('addressInput');
         var autocomplete = new google.maps.places.Autocomplete(input);
-
+        
+        var inputd = document.getElementById('editAddressInput');
+        var autocompleted = new google.maps.places.Autocomplete(inputd); // Changed variable name to autocompleted
+    
         autocomplete.addListener('place_changed', function() {
-            var place = autocomplete.getPlace();
+            const place = autocomplete.getPlace();
             document.getElementById('latitudeInput').value = place.geometry.location.lat();
             document.getElementById('longitudeInput').value = place.geometry.location.lng();
         });
+    
+        autocompleted.addListener('place_changed', function() { // Changed to autocompleted
+            const place = autocompleted.getPlace(); // Changed to autocompleted
+            document.getElementById('latitudeInputd').value = place.geometry.location.lat();
+            document.getElementById('longitudeInputd').value = place.geometry.location.lng();
+        });
     }
-
+    
     google.maps.event.addDomListener(window, 'load', initializeAutocomplete);
 </script>
 
